fix:메인페이지 z-index 설정 및 위치 수정

--- a/frontend/talktalkcare/src/pages/GamePages/css/GamePage.css
+++ b/frontend/talktalkcare/src/pages/GamePages/css/GamePage.css
@@ -154,6 +154,8 @@
 .instructions {
   background-color: #c8e6c9;
   border-radius: 20px;
+  padding: 20px;
+  margin: 0px 200px;
 }
 
 .instructions-button {
