--- a/frontend/talktalkcare/src/styles/components/CardNews.css
+++ b/frontend/talktalkcare/src/styles/components/CardNews.css
@@ -12,7 +12,7 @@
     width: 70%;  /* 가로 크기 줄이기 */
     height: auto; /* 세로 크기는 자동 조정 */
     transition: all 0.3s ease-in-out;
-    padding-top: 40px;
+    margin-top: 40px;
 }
 
 .news-text {
