--- a/frontend/talktalkcare/src/styles/components/FriendList.css
+++ b/frontend/talktalkcare/src/styles/components/FriendList.css
@@ -1,4 +1,5 @@
 .friend-list-container {
+  position: fixed;
   width: 21rem;
   height: 100%;
   position: fixed;
@@ -7,8 +8,9 @@
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   background-color: white;
-  margin-top: 70px;
+  padding-top: 80px;
   z-index: 1000;
+  overflow: hidden;
 }
 
 .friend-list-header {
@@ -37,7 +39,7 @@
   background-color: #c8e6c9;
   border-radius: 20px;
   height: 70px;
-  margin-bottom: 15px;
+  margin: 0px 5px 15px;
 }
 
 .friend-list-add-button {
@@ -66,6 +68,7 @@
   gap: 0.5rem;
   overflow-y: auto;
   height: calc(100vh - 140px);
+  max-height: calc(100vh - 140px); /* 부모 요소 안에서만 스크롤되도록 설정 */
 }
 
 .loading-message, 
